# ChurnDNA

./: README.md  pyproject.toml  train.py
churndna/: __init__.py  api.py  dashboard.py  data_generation.py  explainability.py  features.py  modeling.py
