[project]
name = "churndna"
version = "0.1.0"
description = "Advanced churn prediction system using digital behavior signals"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "optuna>=3.5",
  "imbalanced-learn>=0.12",
  "faker>=22.0",
  "sdv>=1.13",
  "gensim>=4.3",
  "shap>=0.44",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "streamlit>=1.31",
  "matplotlib>=3.8",
  "joblib>=1.3"
]

[tool.setuptools]
packages = ["churndna"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
